manifest.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: world
    ksonnet.io/component: hello.world
  name: world
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: world
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  labels:
    app: world
    ksonnet.io/component: hello.world
  name: world
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: world
  template:
    metadata:
      labels:
        app: world
    spec:
      containers:
        - image: gcr.io/google-samples/hello-app:1.0
          name: world
          ports:
            - containerPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  labels:
    app: world
    ksonnet.io/component: hello.world
  name: world
  namespace: default
spec:
  rules:
    - host: hello.foo.com
      http:
        paths:
          - backend:
              serviceName: world
              servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  labels:
    app: consul
    ksonnet.io/component: consul.consul
  name: consul
  namespace: infrastructure
spec:
  clusterIP: None
  ports:
    - name: http
      port: 8500
    - name: rpc
      port: 8400
    - name: serflan-tcp
      port: 8301
      protocol: TCP
    - name: serflan-udp
      port: 8301
      protocol: UDP
    - name: serfwan-tcp
      port: 8302
      protocol: TCP
    - name: serfwan-udp
      port: 8302
      protocol: UDP
    - name: server
      port: 8300
    - name: consuldns-tcp
      port: 8600
    - name: consuldns-udp
      port: 8600
      protocol: UDP
  selector:
    app: consul
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: consul
    ksonnet.io/component: consul.consul
  name: consul-ui
  namespace: infrastructure
spec:
  ports:
    - name: http
      port: 8500
  selector:
    app: consul
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: traefik
    ksonnet.io/component: traefik.traefik
  name: traefik
  namespace: infrastructure
spec:
  externalTrafficPolicy: Cluster
  loadBalancerIP: 11.11.11.11
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
  selector:
    app: traefik
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: traefik
    ksonnet.io/component: traefik.traefik-dashboard
  name: traefik-dashboard
  namespace: infrastructure
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: traefik
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  labels:
    app: consul
    ksonnet.io/component: consul.consul
  name: consul
  namespace: infrastructure
spec:
  replicas: 3
  selector:
    matchLabels:
      app: consul
  serviceName: consul
  template:
    metadata:
      labels:
        app: consul
      name: consul
      namespace: infrastructure
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - consul
                topologyKey: kubernetes.io/hostname
              weight: 1
      containers:
        - command:
            - /bin/sh
            - -ec
            - |-
              [...]
          image: consul:1.2.2
          imagePullPolicy: Always
          livenessProbe:
            exec:
              command:
                - consul
                - members
            initialDelaySeconds: 300
            timeoutSeconds: 5
          name: consul
          ports:
            - containerPort: 8500
              name: http
            - containerPort: 8400
              name: rpc
            - containerPort: 8301
              name: serflan-tcp
              protocol: TCP
            - containerPort: 8301
              name: serflan-udp
              protocol: UDP
            - containerPort: 8302
              name: serfwan-tcp
              protocol: TCP
            - containerPort: 8302
              name: serfwan-udp
              protocol: UDP
            - containerPort: 8300
              name: server
            - containerPort: 8600
              name: consuldns-tcp
            - containerPort: 8600
              name: consuldns-udp
              protocol: UDP
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/consul
              name: datadir
            - mountPath: /etc/consul/secrets
              name: gossip-key
              readOnly: true
      securityContext:
        fsGroup: 1000
      volumes:
        - name: gossip-key
          secret:
            secretName: consul-gossip-key
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
    - metadata:
        name: datadir
        namespace: infrastructure
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  labels:
    app: traefik
    ksonnet.io/component: traefik.traefik
  name: traefik
  namespace: infrastructure
spec:
  replicas: 3
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      containers:
        - args:
            - --configfile=/config/traefik.toml
          image: traefik:1.6.6
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 80
            timeoutSeconds: 2
          name: traefik
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
            - containerPort: 8880
              name: httpn
              protocol: TCP
            - containerPort: 443
              name: https
              protocol: TCP
            - containerPort: 8080
              name: dash
              protocol: TCP
          readinessProbe:
            failureThreshold: 1
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 80
            timeoutSeconds: 2
          resources:
            limits:
              cpu: 100m
              memory: 50Mi
            requests:
              cpu: 100m
              memory: 30Mi
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /secrets
              name: traefik-dns-sa-credentials
      serviceAccountName: traefik
      terminationGracePeriodSeconds: 60
      volumes:
        - configMap:
            name: traefik
          name: config
        - name: traefik-dns-sa-credentials
          secret:
            secretName: traefik-dns-sa-credentials
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/auth-secret: traefik-dashboard-admin
    ingress.kubernetes.io/auth-type: basic
    kubernetes.io/ingress.class: traefik
  labels:
    app: traefik
    ksonnet.io/component: traefik.traefik-dashboard
  name: traefik-dashboard
  namespace: infrastructure
spec:
  rules:
    - host: traefik.foo.com
      http:
        paths:
          - backend:
              serviceName: traefik-dashboard
              servicePort: 80
